--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     var C11= ["c11_1", "c11_2", "c11_3", "c11_4"]
     var C12= ["c12_1", "c12_2", "c12_3", "c12_4"]
 
-    var buffer_list = ["b9_1","b5_4","究竟为什么","就这里buffer则么号码"]
+    var buffer_list = ["这是一个buffer1","这又是一个buffer"]
     var practice_list = ["你好c", "这里c", "可能b","无语c","好吃b","天啊c"]
     var experiment_list= [...A1, ...A7]
     console.log(buffer_list)
