--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
     //INPUT from participants 
     //var idnum = jsPsych.data.getURLVariable('idnum')
     //var soa = parseInt(jsPsych.data.getURLVariable('soa'))
-    var idnum = jsPsych.data.getURLVariable('idnum')
-    var soa = parseInt(jsPsych.data.getURLVariable('soa'))
+    //var idnum = jsPsych.data.getURLVariable('idnum')
+    //var soa = parseInt(jsPsych.data.getURLVariable('soa'))
     
-    //var idnum = 3
-    //var soa = 200
+    var idnum = 3
+    var soa = 200
 
     var soa_duration = soa-150
     var key_assignment, key_text
