--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://brain2ai.github.io/jsPsychSheet/jspsychsheet.css">
     <meta http-equiv='content-Type' content='text/html; charset=utf-8'/>
 
+
     <style> 
       #topText {
             position: fixed;
@@ -67,14 +68,16 @@
         to {opacity: 1;}
       }
       .jspsych-display-element{
-        font-size: 24px
+        font-size: 24px;
+        color: white;
       }
       .jspsych-btn{
-        font-size: 24px
+        font-size: 24px;
+        color: white;
       }
     </style>
   </head>
-  <body></body>
+  <body style="background-color:rgb(0, 2, 2);"></body>
   <script>
 
     const jsPsych = initJsPsych();
