--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 
     //INPUT from participants 
 
-    //var idnum = jsPsych.data.getURLVariable('idnum')
-    //var soa = parseInt(jsPsych.data.getURLVariable('soa'))
-    //var set = jsPsych.data.getURLVariable('set')
+    var idnum = jsPsych.data.getURLVariable('idnum')
+    var soa = parseInt(jsPsych.data.getURLVariable('soa'))
+var set = jsPsych.data.getURLVariable('set')
     
-    var idnum = 3
-    var soa = 200
-    var set = "C"
+    //var idnum = 3
+    //var soa = 200
+    //var set = "C"
 
 var buffer_list, practice_neg_list, practice_pos_list
 if (set === "A"){  // if the participant needs A_Set as stimuli
