--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     //INPUT from participants 
 
-    var idnum = jsPsych.data.getURLVariable('idnum')
+    var idnum = parseInt(jsPsych.data.getURLVariable('idnum'))
     var soa = parseInt(jsPsych.data.getURLVariable('soa'))
 var set = jsPsych.data.getURLVariable('set')
     
