--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="jsPsych-6.3.1/plugin-survey-text.js"></script>
     <script src="jsPsych-6.3.1/plugin-virtual-chinrest.js"></script>
     <script src="https://brain2ai.github.io/jsPsychSheet/jspsychsheet.js"></script> 
+    <script src="https://unpkg.com/@jspsych/plugin-external-html@1.1.3"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-survey-multi-select@1.1.3"></script>
     <link rel="stylesheet" href="https://brain2ai.github.io/jsPsychSheet/jspsychsheet.css">
     <meta http-equiv='content-Type' content='text/html; charset=utf-8'/>
 
@@ -120,16 +122,24 @@
     var C11= ['上當','女兒','元兇','引爆','心計','欠款','火腿','充裕','民主','吃飽','合併','合理','名家','污辱','自學','低頭','困倦','決裂','見面','奇才','店長','延誤','拋下','拔毛','便利','保育','勇敢','咬住','很好','毒蛇','限制','修身','挫敗','校花','爹娘','留念','真情','神仙','衰亡','鬥志','假扮','健全','專才','專制','捨棄','掃興','接受','清晨','脫髮','販毒','軟糖','透徹','創造','創辦','悶熱','插嘴','殘缺','發燒','貶值','超重','進步','開通','順眼','傳記','勤快','暗箭','落葉','過獎','奪去','嫩芽','榮譽','聚餐','增值','墮胎','撕票','暴政','毆打','獎賞','窮人','衝破','學生','興趣','優越','膽怯','隱士','醫術','難逃','寶藏','贏錢','饑荒','竊案','變數','變壞','一定','可是','光亮','安寧','收工','戒嚴','典雅','刷新','刺骨','刺眼','和睦','抱恙','拍手','品嚐','枯燥','疫症','相見','苦心','冥婚','悅耳','氣氛','特質','疲憊','神奇','神像','荒島','討債','強度','救起','敗局','添加','清泉','尊嚴','揚聲','痛楚','登山','飲宴','亂闖','惹火','愚人','解剖','運送','演唱','監控','蜜桃','誘導','趕路','暴雨','饑餓','顧及','邏輯','體面','上來','小屋','反問','出遊','民怨','民憤','仿造','共犯','冷箭','協同','季軍','忠貞','爭端','花燈','侷促','垂死','枯葉','病夫','病況','偽裝','崎嶇','得罪','票房','貪賄','剩菜','愕然','捶打','敢於','逼迫','預祝','蒙受','說錯','撞入','遷出','閱歷','餓着','興盛','糞土','謬論','不當','中傷','牛扒','矛頭','亞軍','奇人','承繼','保管','客氣','政績','砸壞','笑柄','假造','毀譽','榮休','監場','膈膜','論述','應景','糟塌','邊疆','警界','山崖','好球','延壽','茅廁','重擔','時宜','停業','殺機','毆傷','醒目','瀑布','不符','古都','庇蔭','我家','哀痛','專橫','從寬','淫邪','喑啞','圍捕','戰時','隨即','優等','斷掌','贋品','鑽進','全權','行乞','陌路','格鬥','航天','送終','授徒','靜觀','顫慄','山澗','利落','兩難','刺刀','相宜','雄威','暗流','罷教','蔚藍','可敬','清溪','蒙昧','艱澀','藝能','困守','聖像','築路','奴化','思辨','葬送','續聘']
     var C12= ['升官','本地','回復','多謝','存貨','死路','作詩','志願','抄襲','抗拒','折騰','秀髮','肝癌','怕冷','冒昧','星辰','珍惜','皇宮','砍下','香水','冤家','恩愛','核彈','核爆','消逝','耕地','荒野','配偶','骨折','假髮','售罄','基督','寄託','殺菌','異形','莊重','貧血','麻雀','善行','報仇','欺騙','結怨','開解','黃色','傳奇','傷亡','感染','搭擋','敬意','新娘','煙草','補償','飽滿','漫長','誤解','輕敵','寫生','彈琴','潤喉','請教','憑證','謀利','擦去','獲救','鍛鍊','離職','鬆懈','獸性','纏住','露餡','顯眼','人文','小人','才幹','不慎','不願','止步','出嫁','可愛','失足','犯案','白癡','名句','名聲','屹立','成事','自愛','自盡','志氣','求愛','邪念','刺殺','拖延','放鬆','前線','思維','星球','流露','美好','倒塌','哽咽','容貌','耗時','荒涼','深情','組織','準時','落敗','實力','賒賬','增高','暫定','瘡疤','瘦弱','衝勁','學長','戰鬥','聯邦','聯署','鮮花','簡約','穩當','難堪','鐵棍','讓開','人權','山林','工錢','凶器','化解','升班','文學','扣押','死硬','自誇','至尊','走火','彼此','泡湯','阻斷','促進','信服','削髮','怨恨','破滅','側臥','牽涉','第二','揮霍','智者','棉袍','滋生','發愁','發達','童工','虛心','越軌','感悟','逼問','鼓聲','厭棄','輕柔','遜色','調劑','踏過','歡暢','失真','生病','曲解','妥協','扯爛','把柄','身故','注目','爸爸','俐落','屍首','後腿','拼死','捆緊','猛火','脫光','惡心','硬朗','裂痕','黑錢','傷寒','隔絕','漠視','遞減','廝殺','緝捕','謝函','斷送','曠工','下鄉','弄壞','抄家','長兄','秋景','胞姊','重刑','酒具','帶頭','淤塞','陰毒','喊冤','植皮','黑頭','傷神','搶親','溝渠','遊伴','違者','趕去','褒揚','譏笑','丹田','斥罵','皮疹','刑房','兵變','決志','享譽','皆宜','省去','淨賺','脫臼','激賞','低檔','沈淪','拋除','殃及','茶花','偷生','墓室','噩運','刁民','幽香','奚落','宴請','祝捷','商號','得以','甜睡','減損','發函','撬開','蠻橫','偽劣','速效','搥打','犯上','作案','金箔','超卓','萬全','醇厚','屈曲','毒手','授勛','鼠輩','廢水']
 
-
+    var all_stimuli_lists = {
+      "A1":A1, "A2":A2, "A3":A3, "A4":A4, "A5":A5, "A6":A6, "A7":A7, "A8":A8, "A9":A9, "A10":A10, "A11":A11, "A12":A12,
+      "B1":B1, "B2":B2, "B3":B3, "B4":B4, "B5":B5, "B6":B6, "B7":B7, "B8":B8, "B9":B9, "B10":B10, "B11":B11, "B12":B12,
+      "C1":C1, "C2":C2, "C3":C3, "C4":C4, "C5":C5, "C6":C6, "C7":C7, "C8":C8, "C9":C9, "C10":C10, "C11":C11, "C12":C12
+    }
     //INPUT from participants 
 
     var idnum = parseInt(jsPsych.data.getURLVariable('idnum'))
     var soa = parseInt(jsPsych.data.getURLVariable('soa'))
-var set = jsPsych.data.getURLVariable('set')
+    var set = jsPsych.data.getURLVariable('set')
+    var set1_text = jsPsych.data.getURLVariable('set1')
+    var set2_text = jsPsych.data.getURLVariable('set2')
     
     //var idnum = 3
     //var soa = 200
     //var set = "C"
+    //var set1_text = "C1"
+    //var set2_text = "C3"
 
 var buffer_list, practice_neg_list, practice_pos_list
 if (set === "A"){  // if the participant needs A_Set as stimuli
@@ -146,12 +156,16 @@ if (set === "A"){  // if the participant needs A_Set as stimuli
   var practice_neg_list = ['可憐', '遭受','懊悔']
 }
 
+var set1, set2
+set1 = all_stimuli_lists[set1_text]
+set2 = all_stimuli_lists[set2_text]
+console.log(set1)
+console.log(set2)
     
-var test_exp_1 = ['分開','心慌','出血','出醜']
-    var test_exp_2 = ['太空','父母','加分','平安']
 
 
-    var experiment_list= [...test_exp_1, ...test_exp_2] ///needs revise 
+
+    var experiment_list= [...set1, ...set2] ///needs revise 
 
     var practice_list = [...practice_neg_list, ...practice_pos_list]
 
@@ -306,6 +320,19 @@ console.log(buff_stim_pos)
       fullscreen_mode: true
     } 
     timeline.push(fullscreen_on);
+
+    var consent = {
+      type: jsPsychSurveyMultiSelect,
+      questions: [
+    {
+      prompt: " 您好。感謝您參與這項研究。我們正在研究人們對中文複合詞的判斷。請點選以下同意繼續。", 
+      options: ["我已閱讀上述資訊並收到了我提出的問題的答案。我同意參加這項研究，我已年滿 18 歲。"], 
+      horizontal: true,
+      required: true,
+      name: 'Colors'
+    }
+  ]}
+    timeline.push(consent)
 
     var instruction_2 = {
       type: jsPsychHtmlButtonResponse,
@@ -612,7 +639,7 @@ console.log(buff_stim_pos)
       data: {screen: "fullscreen_off"},
       on_finish: function(){
         //xxxxx console.log(jsPsych.data.get().filter({screen: 'stim'}).csv()); xxxxx//track    
-        jsPsych.data.get().filter({screen: 'stim'}).localSave('csv','set'+set+'_id'+idnum.toString()+'_'+soa.toString()+'.csv')}
+        jsPsych.data.get().filter({screen: 'stim'}).localSave('csv','set'+set+'_id'+idnum.toString()+'_'+soa.toString()+set1_text+set2_text+'.csv')}
   } 
     timeline.push(fullscreen_off)
 
