--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@ test_exp_2 = ['入賬','小孩','光棍','回家']
 
 
 
-    var experiment_list= [...test_exp_1, ...test_exp_2] ///needs revise
+    //var experiment_list= [...test_exp_1, ...test_exp_2] ///needs revise
 
 
-    //var experiment_list= [...set1, ...set2] ///needs revise 
+    var experiment_list= [...set1, ...set2] ///needs revise 
 
     var practice_list = [...practice_neg_list, ...practice_pos_list]
 
